# PLAGIARISM-DETECTION

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  comparer.py  constants.JSON  dezipper.py  exercice1.py  jsonizer.py  loadcsts.py  plsc.py
EXOS/: exercice1_hello_poly.py  exercice1_palindrome.py  exercice2_prix_gateau.py  exercice2_verbe_er.py  exercice3_cannon.py  exercice3_plus_long_mot.py  exercice4_remplace_tout.py  exercice4_voiture.py  exercice5_démele_mot.py  exercice5_paire_impaire.py  exercice6_majuscule.py  exercice6_premier.py  exercice7_age.py  exercice7_fizz_buzz.py  exercice8_encryption.py  exercice8_génie.py  exercice9_pendu.py
Python/: README.md  comparer.py  dezipper.py  jsonizer.py  oneliner.py  plsc.py  revealcheats.py  updater.py
Rust/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
Rust/src/: main.rs
Rust/src/model/: compare.rs  constant.rs  mod.rs  preprocessing.rs
Rust/src/view/: app.rs  graph.rs  mod.rs  task.rs
backup/: exercice2.py  exercice3.py  q2.py  q3.py  q4.py  q5.py  q6.py  q7.py
src/model/: compare.rs
src/view/: graph.rs  task.rs
