[package]
name = "plagiarism_detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.release]
strip = true
lto = "fat"

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10"
ignore = "0.4"
poll-promise = "0.2.0"
rayon = "1.7.0"
rfd = {version = "0.11.3", default-features = false, features = ["xdg-portal"]}
rkr-gst = {git = "https://github.com/marcantoinem/rkr-gst/", rev = "ef6fd0ccde51c9578e1c6c354051ce116d074dcb"}
serde = {version = "1", features = ["derive"]}
eframe = {version = "0.21", default-features = false, features = ["default_fonts", "wgpu", "persistence"]}